# hate-cli

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
examples/: duplicates.rs  info.rs  web.rs
lib/hate/: Cargo.toml
lib/hate/src/: lib.rs
lib/helixton-toolset/: Cargo.toml
lib/helixton-toolset/src/: lib.rs
src/: cli_arguments.rs  cli_hate.rs  main.rs
src/cli/: commands.rs
src/cli_arguments/: mod.rs
src/hate/src/: lib.rs
tests/: integration_tests.rs
