[package]
name = "hate-cli"
version = "0.1.0"
edition = "2021"
description = "Helixton Toolset for Development Operations"
authors = ["Alexander Schaub <alexander.schaub@helixton.de>"]
license = "MIT"
keywords = ["hate", "helixton", "development", "tool", "toolset", "environment"]

[workspace]

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
hate = { path = "src/hate" }
unicode-segmentation = "1.10.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


