[package]
name = "hate-cli"
version = "0.1.0"
edition = "2021"
description = "Helixton Toolset for Development Operations"
authors = ["Alexander Schaub <alexander.schaub@helixton.de>"]
license = "MIT"
keywords = ["hate", "helixton", "development", "tool", "toolset", "environment"]

[workspace]

[dependencies]
hate = { path = "src/hate" }
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = { version = "1.0.94" }
assert_cli = "0.6.3"
assert_cmd = "2.0.8"
predicates = "2.1.5"
unicode-segmentation = "1.10.1"
proc-macro2 = "1.0.52"
error-chain = "0.12.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.15", features = ["json"] }
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


